# dircacher

./: .gitignore  Cargo.toml  README.md  prepare_arch.sh
arch-pkg/: PKGBUILD
src/: main.rs
systemd/: dircacher.service
