[package]
name = "dircacher"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
overflow-checks = true

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
